# goit-ds-hw-01

./: Dockerfile  addressbook.pkl  ds-hw-01.py  pyproject.toml
