[project]
name = "goit-ds-hw-01"
version = "0.1.0"
description = "environment for assistant"
authors = [
    {name = "Andrii-Rublov",email = "rublyovandrew@gmail.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
